# kontos

./: .gitignore  .gitmodules  Makefile  config.nims  dune-project  kontos.fsproj  kontos.nimble  kontos.opam  kontos.sublime-project  lexer.fsl  parser.fsy  renderdoc.cap
res/shaders/: ui.frag.spv  ui.vert.spv
src/: ast.fs  ast.ml  bytecode.fs  codegen.ml  common.nim  compat.nim  config.nim  dune  genc.ml  input.nim  lexer.mll  main.fs  main.ml  main.nim  model.nim  models.nim  nim.cfg  parser.mly  project.nim  ptrarith.nim  renderer.nim  resmgr.nim  svg.nim  tilemap.nim  types.ml  ui.nim
src/shaders/: cluster.comp  model.glsl  svg.glsl  tilemap.glsl  ui.glsl  vectormodel.glsl
tests/: Test Project.ktsproj  kontos.h  precedence.kon  syntax-test.kon  test.kon  test1.kon
vm/: bytecode.h  main.c  vm.c  vm.h
