(menhir
  (modules parser)
  (flags --explain --inspection --table --dump)
  (infer true))

(ocamllex lexer)

(executable
  (public_name kontos)
  (name main)
  (libraries core menhirLib)
  (preprocess (pps ppx_jane))
  (flags (:standard -warn-error "-unused-value-declaration"
          :standard -warn-error "-unused-open")))
