(menhir
  (modules parser)
  (flags --explain --dump)
  (infer true))

(ocamllex lexer)

(executable
  (public_name kontos)
  (name main)
  (libraries core core_unix.command_unix menhirLib bitstring)
  (preprocess (pps ppx_jane ppx_bitstring ppx_deriving.enum ppx_deriving.show))
  (flags (:standard -warn-error "-A")))
